# Demiplane

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  code-style-jb.xml  codestyle.md  vcpkg.json
benchmarks/: CMakeLists.txt
benchmarks/database/: CMakeLists.txt  raw_vs_compiled_benchmark.cpp
benchmarks/database/bench_common/: bench_constants.hpp  bench_latency.hpp
benchmarks/database/concurrency/: CMakeLists.txt  benchmark_pqxx.cpp  benchmark_session_async.cpp
benchmarks/database/postgresql/: CMakeLists.txt  raw_vs_compiled_benchmark.cpp
benchmarks/database/simple/: CMakeLists.txt  benchmark_async_executor.cpp  benchmark_libpq.cpp  benchmark_pqxx.cpp  benchmark_session_async.cpp  benchmark_session_sync.cpp  benchmark_sync_executor.cpp
benchmarks/disruptor/: CMakeLists.txt  disruptor_speed_test.cpp
benchmarks/http/: CMakeLists.txt  http_bomber.cpp
benchmarks/logger/: CMakeLists.txt  abseil_file_benchmark.cpp  benchmark_harness.hpp  file_logger.cpp  scroll_file_benchmark.cpp
common/: CMakeLists.txt
common/algorithms/: CMakeLists.txt
common/algorithms/sliding_window_sorter/: sliding_window_sorter.hpp
common/chrono/: CMakeLists.txt
common/chrono/clock/: clock.hpp
common/chrono/timer/: cancellation_token.hpp
common/chrono/utilities/: chrono_utils.hpp
common/containers/: robin_hood_hashing.hpp
common/crypto/: CMakeLists.txt
common/crypto/hasher/: hash_interface.hpp
common/crypto/utilities/: compile_time_utils.hpp  security_utils.hpp
common/fsm/: CMakeLists.txt
common/fsm/core/: state.hpp  transition.hpp
common/fsm/parser/: parser.hpp
common/gears/: CMakeLists.txt
common/gears/meta_programming/: gears_class_traits.hpp  gears_concepts.hpp  gears_templates.hpp
common/gears/outcome/: gears_outcome.hpp
common/gears/result/: gears_exception_result.hpp
common/gears/strings/: gears_strings.hpp
common/gears/utilities/: gears_convert.hpp  gears_hash.hpp  gears_macros.hpp  gears_types.hpp  gears_utils.hpp
common/ink/: CMakeLists.txt
common/ink/base/: colors.hpp  glyphs.hpp  layout.hpp
common/ink/box/: box.hpp
common/ink/colors/: codes.hpp  colors.hpp
common/ink/rendering/: CMakeLists.txt  concepts.hpp
common/ink/section/: section.hpp
common/ink/separators/: separators.hpp
common/ink/table/: table.hpp
common/math/: CMakeLists.txt
common/math/random/: base_random_generator.hpp
common/monitor/: CMakeLists.txt
common/multithread/: CMakeLists.txt
common/multithread/disruptor/: CMakeLists.txt  disruptor.hpp  sequence.hpp
common/multithread/thread_pool/: enqueued_task.hpp
common/nexus/: CMakeLists.txt
common/nexus/core/: details.hpp  nexus_traits.hpp
common/nexus/policies/: policies.hpp
common/nexus/provider/: nexus_provider.hpp
common/scroll/: CMakeLists.txt
common/scroll/colors/: colors.hpp
common/scroll/configurator/: config_interface.hpp
common/scroll/core/: entry_interface.hpp  log_level.hpp
common/scroll/entry/: entry_config.cpp  entry_interface.hpp  log_level.hpp
common/scroll/logger/: logger_interface.hpp  stream_log.hpp
common/scroll/loggers/: file_logger.hpp
common/scroll/tracers/: console_tracer.hpp
common/serialization/: CMakeLists.txt
common/serialization/config/: config_interface.hpp  field.hpp  serial_concepts.hpp
components/: CMakeLists.txt
components/database/: CMakeLists.txt
components/database/base/: CMakeLists.txt  db_config_interface.hpp  db_connect_params.hpp
components/database/behavioral/: CMakeLists.txt
components/database/clients/: CMakeLists.txt
components/database/core/: CMakeLists.txt  db_shortcuts.hpp
components/database/creational/: CMakeLists.txt
components/database/dialects/: CMakeLists.txt
components/database/exceptions/: CMakeLists.txt  db_error_codes.hpp
components/database/features/: CMakeLists.txt  providers.hpp
components/database/mock/: CMakeLists.txt
components/database/orm/: CMakeLists.txt
components/database/params/: CMakeLists.txt
components/database/postgres/: CMakeLists.txt  pqxx_configurator.hpp  pqxx_query_engine.hpp  pqxx_utilities.hpp
components/database/primitives/: CMakeLists.txt
components/database/providers/: CMakeLists.txt
components/database/query/: CMakeLists.txt
components/http/: CMakeLists.txt
components/nexus/: CMakeLists.txt
components/nexus/core/: details.hpp  nexus_fwd.hpp  nexus_traits.hpp
components/nexus/policies/: policies.hpp
components/nexus/pylon/: basic_pylon.hpp  safe_pylon.hpp  unique_pylon.hpp  view_pylon.hpp
core/: CMakeLists.txt
core/chrono/: CMakeLists.txt
core/crypto/: CMakeLists.txt
core/crypto/hasher/: hash_interface.hpp
core/database/: CMakeLists.txt
core/database/base/: db_shortcuts.hpp
core/database/behavioral/: CMakeLists.txt
core/database/creational/: CMakeLists.txt
core/database/exceptions/: db_exceptions.hpp
core/database/interface/: db_client.cpp  db_config_interface.hpp  db_connect_params.hpp  db_interface.hpp
core/database/mock/: CMakeLists.txt
core/database/postgres/: CMakeLists.txt  pqxx_client.hpp
core/fsm/: CMakeLists.txt
core/fsm/core/: state.hpp  transition.hpp
core/gears/: CMakeLists.txt
core/interceptors/: CMakeLists.txt  interceptors.hpp
core/math/: CMakeLists.txt
core/multithread/: CMakeLists.txt
core/result/: CMakeLists.txt  ires.hpp
core/scroll/: CMakeLists.txt
core/stopwatch/: CMakeLists.txt  stopwatch.hpp
core/traits/: CMakeLists.txt  traits_classes.hpp
core/utilities/: CMakeLists.txt
demiplane/: CMakeLists.txt
demiplane/crypto/: CMakeLists.txt
demiplane/database/: CMakeLists.txt
demiplane/multithread/: CMakeLists.txt
demiplane/stopwatch/: CMakeLists.txt
demiplane/utilities/: CMakeLists.txt
tests/: CMakeLists.txt  docker-compose.test.yml
tests/codesandbox/: CMakeLists.txt  main.cpp
tests/functional_tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt
tests/sandbox/: main.cpp
tests/scripts/: db-test-env.sh  db-test-reset.sh  db-test-start.sh  db-test-stop.sh  run-functional-tests.sh
tests/unit_tests/: CMakeLists.txt
(+951 files in other folders)
