set(DMP_COMMON ${PROJECT_NAME}.Common)

###############################################

add_subdirectory(gears)

add_subdirectory(crypto)

add_subdirectory(multithread)

add_subdirectory(scroll)

add_subdirectory(3rdparty)

add_subdirectory(chrono)

add_subdirectory(math)

add_subdirectory(fsm)

add_subdirectory(nexus)

add_subdirectory(algorithms)