set(DMP_COMPONENT ${PROJECT_NAME}.Component)

##############################################################################
# Database components
##############################################################################
add_subdirectory(database)
##############################################################################