set(DMP_COMPONENT ${PROJECT_NAME}.Component)

##############################################################################
# Database components
##############################################################################
if (BUILD_DATABASE)
    add_subdirectory(database)
endif ()
##############################################################################


##############################################################################
# Nexus components
##############################################################################
if(BUILD_NEXUS)
    add_subdirectory(nexus)
endif ()
##############################################################################

##############################################################################
# Http 1/1.1 components
##############################################################################
if(BUILD_NEXUS)
    add_subdirectory(http)
endif ()
##############################################################################