###############################################
add_subdirectory(crypto)

add_subdirectory(stopwatch)

add_subdirectory(utilities)

add_subdirectory(database)

add_subdirectory(multithread)

add_subdirectory(scroll)

add_subdirectory(interceptors)

add_subdirectory(3rdparty)

add_subdirectory(result)

add_subdirectory(traits)
# TODO: monitor development got delayed due to design problems
#add_subdirectory(monitor)