##############################################################################
#
##############################################################################
if (BUILD_POSTGRESQL)
    message("Benchmarks for PostgreSQL will be built")
    add_subdirectory(postgresql)
endif ()
##############################################################################