##############################################################################
#
##############################################################################
add_executable(${DMP_BENCHMARKS}.Http.Bomber
        http_bomber.cpp
)
target_link_libraries(${DMP_BENCHMARKS}.Http.Bomber
        PRIVATE
        Demiplane::Component::Http
)
##############################################################################